unpackaged/main/default/objects/Piece_Jointe__c/Piece_Jointe__c.object-meta.xml
<CustomObject>
    <label>Dossier privé</label>
    <nameField>
        <label>Nom du dossier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dossiers privés</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>