unpackaged/main/default/objects/Piece_Jointe__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Pieces_Jointes</relationshipName>
    <type>Lookup</type>
</CustomField>