unpackaged/main/default/objects/Piece_Jointe__c/fields/Date_de_creation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_creation__c</fullName>
    <formula>CreatedDate</formula>
    <label>Date de création</label>
    <type>DateTime</type>
</CustomField>