unpackaged/main/default/objects/Piece_Jointe__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>38000</length>
    <type>Html</type>
</CustomField>