unpackaged/main/default/objects/Piece_Jointe__c/fields/Devis_SAP_CPQ__c.field-meta.xml
<CustomField>
    <fullName>Devis_SAP_CPQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis SAP CPQ</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Dossiers privés</relationshipLabel>
    <relationshipName>Dossiers_private</relationshipName>
    <type>Lookup</type>
</CustomField>