unpackaged/main/default/objects/Piece_Jointe__c/fields/Num_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Num_Opportunity__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Devis_SAP_CPQ__c)), 
    Devis_SAP_CPQ__r.Opportunity__r.NumeroOpportunite__c ,   
      Devis__r.Opportunity.NumeroOpportunite__c 
)</formula>
    <label>Numéro de l&#39;opportunité</label>
    <type>Text</type>
</CustomField>