unpackaged/main/default/objects/Piece_Jointe__c/fields/Opportunite__c.field-meta.xml
<CustomField>
    <fullName>Opportunite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Pieces_Jointes</relationshipName>
    <type>Lookup</type>
</CustomField>