unpackaged/main/default/objects/Piece_Jointe__c/fields/Pays_Region_PF__c.field-meta.xml
<CustomField>
    <fullName>Pays_Region_PF__c</fullName>
    <formula>IF(
NOT(ISBLANK(Devis_SAP_CPQ__c)),
text(Devis_SAP_CPQ__r.Opportunity__r.PaysRegionPF__c) ,
text(Devis__r.Opportunity.PaysRegionPF__c) 
)</formula>
    <label>Pays / Région PF</label>
    <type>Text</type>
</CustomField>