unpackaged/main/default/objects/Piece_Jointe__c/fields/Statut_de_la_demande__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_la_demande__c</fullName>
    <formula>text(Devis__r.Statut_de_la_demande__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut de la demande</label>
    <type>Text</type>
</CustomField>