unpackaged/main/default/objects/Piece_Jointe__c/fields/TECH_AccesUtilisateurs__c.field-meta.xml
<CustomField>
    <fullName>TECH_AccesUtilisateurs__c</fullName>
    <label>TECH Accés Utilisateurs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>