unpackaged/main/default/objects/Piece_Jointe__c/recordTypes/Dossier_Prive.recordType-meta.xml
<RecordType>
    <fullName>Dossier_Prive</fullName>
    <active>true</active>
    <label>Dossier Privé</label>
</RecordType>