unpackaged/main/default/objects/Piece_Jointe__c/recordTypes/SurCompte.recordType-meta.xml
<RecordType>
    <fullName>SurCompte</fullName>
    <active>true</active>
    <label>Sur Compte</label>
</RecordType>