unpackaged/main/default/objects/Piece_Jointe__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Opportunite__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>